# chatbot

./: .coverage  .coveragerc  .gitignore  README.md  audio_file.m4a  bootstrap.py  endpoints.http  main.py  pyproject.toml
.code_quality/: bandit.yaml  mypy.ini
Test/: test_usecases.py
VIRTUAL-ENVIRONMENT-PATH-HERE/: pyvenv.cfg
adapters/: agent.py  audio_transcription.py  chat_repository.py
app/: bootstrap.py  configurations.py  ent2.py  entrypoints.py  logs.py  main.py
data_preparation/: requirements.txt  upsert_files.py
domain/: models.py  ports.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_292c3a3b7295239a___init___py.html  z_292c3a3b7295239a_agent_py.html  z_292c3a3b7295239a_audio_transcription_py.html  z_292c3a3b7295239a_chat_repository_py.html  z_292c3a3b7295239a_retriever_py.html  z_36f028580bb02cc8___init___py.html  z_36f028580bb02cc8__test_py.html  z_36f028580bb02cc8_test2_py.html  z_36f028580bb02cc8_test_py.html  z_36f028580bb02cc8_test_usecases_parcial_py.html  z_4c37ce8615b5aa70___init___py.html  z_4c37ce8615b5aa70_usecases_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_bootstrap_py.html  z_5f5a17c013354698_configurations_py.html  z_5f5a17c013354698_entrypoints_py.html  z_5f5a17c013354698_logs_py.html  z_5f5a17c013354698_main_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531__test_py.html  z_a44f0ac069e85531_test_usecases_py.html  z_ad0ff7ef6dee06c8___init___py.html  z_ad0ff7ef6dee06c8_models_py.html  z_ad0ff7ef6dee06c8_ports_py.html  z_bb0f490da40c8ca0___init___py.html  (+2 more)
(+39 files in other folders)
